fix: Fix the highlight on small screens for navbar
Fix the highlight on screens for nav bar generated from hover not from active class by making the active class more specific for the navbar

--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,9 @@ body{
     display: none;
 
 }
+.main__nav_list .active,
 .active{
-    background: linear-gradient(0deg, rgba(51, 204, 51, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(0deg, rgba(51, 204, 51, 0.5) 0%, rgba(0, 0, 0, 0) 100%) ;
 }
 /* style collapsed element*/
 .bubbles:nth-of-type(odd) .container::before{
